# castbot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.ini.example  config.toml.example  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml  flake8.yml  pylint.yml
castbot/: __init__.py  __main__.py  bot.py  button.py  client.py  device.py  devices_collection.py  downloader.py  http.py  utils.py  video.py
castbot/devices/: chromecast.py  upnp.py  vlc.py  web.py  xbmc.py
castbot/static/: index.html
smart_tv_telegram/: __init__.py  __main__.py  bot.py  config.py  device.py  devices_collection.py  http.py  mtproto.py  tools.py  utils.py
smart_tv_telegram/devices/: chromecast.py  chromecast_device.py  upnp.py  upnp_device.py  vlc.py  vlc_device.py  web.py  web_device.py  xbmc.py  xbmc_device.py
