[tool.poetry]
name = "smart-tv-telegram"
version = "1.4.0"
description = ""
authors = ["Zhongke Chen <github@ch3n2k.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8"
aiosignal = "^1.3"
async-lru = "^2.0"
async-timeout = "^4.0"
async-upnp-client = "^0.35"
attrs = "^23.1"
casttube = "0.2.1"
certifi = "^2023.7"
charset-normalizer = "^3.2"
defusedxml = "0.7.1"
frozenlist = "^1.4"
idna = "^3.4"
ifaddr = "0.2.0"
multidict = "^6.0"
protobuf = "^4.24"
pyaes = "1.6.1"
pychromecast = "^13.0"
pyrogram = "^2.0"
pysocks = "1.7.1"
python-didl-lite = "1.3.2"
requests = "^2.31"
urllib3 = "^2.0"
voluptuous = "0.13.1"
yarl = "^1.9"
zeroconf = "^0.112"
tgcrypto = "^1.2"
you-get = "^0.4"
youtube-dl = { git = "https://github.com/ytdl-org/youtube-dl.git" }

[tool.poetry.scripts]
smart_tv_telegram = "smart_tv_telegram.__main__:entry_point"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
