[tool.poetry]
name = "castbot"
version = "1.4.1"
description = "A Telegram Bot to stream contents (Telegram videos, Youtube videos and more) to your smart TV"
authors = ["Zhongke Chen <github@ch3n2k.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8"
aiosignal = "^1.3"
async-lru = "^2.0"
async-timeout = "^4.0"
async-upnp-client = "^0.36"
attrs = "^23.1"
casttube = "0.2.1"
certifi = "^2023.7"
catt = "^0.12.11"
charset-normalizer = "^3.2"
defusedxml = "0.7.1"
frozenlist = "^1.4"
idna = "^3.4"
ifaddr = "0.2.0"
multidict = "^6.0"
protobuf = "^4.24"
pyaes = "1.6.1"
pychromecast = "^13.0"
pyrogram = "^2.0"
pysocks = "1.7.1"
python-didl-lite = "1.3.2"
requests = "^2.31"
urllib3 = "^2.0"
voluptuous = "0.13.1"
yarl = "^1.9"
zeroconf = "^0.115"
tgcrypto = "^1.2"
you-get = "^0.4"
yt-dlp = "^2023.10.7"
toml = {version="^0.10", python="<3.11"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^3.0.1"

[tool.pylint.design]
max-args = 7
max-attributes=30
min-public-methods=0
max-locals=30
max-statements=100
max-branches=100
max-returns=15
max-public-methods=25

[tool.pylint.format]
expected-line-ending-format="LF"
ignore-long-lines="^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren=4
indent-string='    '
max-line-length=120

[tool.pylint."Message Control"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "invalid-overridden-method",
    "cyclic-import",
    "missing-class-docstring",
    "super-init-not-called",
    "broad-except",
    "protected-access",
    "duplicate-code",
    "consider-using-with"
]

[tool.poetry.scripts]
castbot = "castbot.__main__:entry_point"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
