[tool.poetry]
name = "castbot"
version = "1.4.1"
description = "A Telegram Bot to stream contents (Telegram videos, Youtube videos and more) to your smart TV"
authors = ["Zhongke Chen <github@ch3n2k.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiohttp = "^3.9"
async-lru = "^2.0"
async-timeout = "^4.0"
catt = "^0.12.11"
async-upnp-client = "^0.36"
toml = {version="^0.10", python="<3.11"}
you-get = "^0.4"
yt-dlp = "^2023.11.16"
pyrogram = "^2.0"
tgcrypto = "^1.2"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.1"
pylint = "^3.0.1"
mypy = "^1.6"
types-toml = "^0.10"
black = "^23.9.1"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pylint.design]
max-args = 7
max-attributes=30
min-public-methods=0
max-locals=30
max-statements=100
max-branches=100
max-returns=15
max-public-methods=25

[tool.pylint.format]
expected-line-ending-format="LF"
ignore-long-lines="^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren=4
indent-string='    '
max-line-length=120

[tool.pylint."Message Control"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "invalid-overridden-method",
    "cyclic-import",
    "missing-class-docstring",
    "super-init-not-called",
    "broad-except",
    "protected-access",
    "duplicate-code",
    "consider-using-with"
]

[tool.poetry.scripts]
castbot = "castbot.__main__:entry_point"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
